Add new hints
